--- a/index.html
+++ b/index.html
@@ -137,13 +137,14 @@
           <h2 class="about__title">Чем мы занимаемся</h2>
           <ul class="about__list list">
             <li class="about__item">
-              <img src="./images/img-1-min.jpg" alt="проектирование" width="370" height="294" />
+              <img srcset="./images/img-1-min.jpg 1x, ./images/img-1-x2-min.jpg 2x" src="./images/img-1-min.jpg" alt="проектирование" width="370" height="294" />
               <div class="about__thumb">
                 <h3 class="about__img-title">Десктопные приложения</h3>
               </div>
             </li>
             <li class="about__item">
               <img
+                srcset="./images/img-2-min.jpg 1x, ./images/img-2-x2-min.jpg 2x"
                 src="./images/img-2-min.jpg"
                 alt="дизайн мобильного приложения"
                 width="370"
@@ -154,7 +155,7 @@
               </div>
             </li>
             <li class="about__item">
-              <img src="./images/img-3-min.jpg" alt="цветовое решение" width="370" height="294" />
+              <img srcset="./images/img-3-min.jpg 1x, ./images/img-3-x2-min.jpg 2x" src="./images/img-3-min.jpg" alt="цветовое решение" width="370" height="294" />
               <div class="about__thumb">
                 <h3 class="about__img-title">Дизайнерские решения</h3>
               </div>
