--- a/index.html
+++ b/index.html
@@ -588,8 +588,8 @@
                   <use href="./images/symbol-defs.svg#icon-check"></use>
                 </svg>
               </span>
-              Соглашаюсь с рассылкой и принимаю&nbsp;
-              <a href="" class="terms__link">Условия договора</a>
+              <span>Соглашаюсь с рассылкой и принимаю <a href="" class="terms__link">Условия договора</a>
+              </span>  
             </label>
             <button type="submit" class="form__button">Отправить</button>
           </form>
